Adding latest changes, doesn't include profile for parallel execution